# EDGE

./: .gitattributes  .gitignore  Cargo.toml  Directory.Packages.props  EDGE.slnx  README.md
EdgeModTool/: App.axaml  App.axaml.cs  Compiler.cs  EdgeModTool.csproj  ImageConverter.cs  Program.cs  ViewLocator.cs
EdgeModTool.Gui/: EdgeModTool.Gui.csproj  RectilinearPolygonSolver.cs  XHelper.cs  app.manifest
EdgeModTool.Gui/LibTwoTribes/: AssetHash.cs  AssetHeader.cs  EAN.cs  EMA.cs  ESOFooter.cs  ESOHeader.cs  ESOModel.cs  ETX.cs  ETX1804.cs
EdgeModTool.Gui/LibTwoTribes/Util/: CRC32.cs
EdgeModTool.Gui/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
EdgeModTool.Gui/Views/: MainWindow.axaml
EdgeModTool/Level/: Flat.cs  IXSerializable.cs  Point2D8.cs  Point3D16.cs  Rect8.cs  Size2D.cs  Size3D.cs
EdgeModTool/LibTwoTribes/: Asset.cs  EANHeader.cs  EMAAnimationBlock.cs  EMADefaultTransform.cs  EMATexture.cs  ESO.cs  ETX1803.cs  Keyframe.cs  KeyframeBlock.cs  LOC.cs
EdgeModTool/LibTwoTribes/Util/: AssetUtil.cs  BinaryUtil.cs  Vec2.cs  Vec3.cs
EdgeModTool/Views/: MainWindow.axaml.cs
edgemodtool-rs/: lib.rs  loc.rs  main.rs
mods/: .gitignore  README.md  clang_win.ini  cross_linux.ini.template  include.lua  windows-custom.cmake  windows-linuxcross.cmake.template  x86-windows-static-custom-clang.cmake  x86-windows-static-custom.cmake  x86-windows-static-linuxcross.cmake  x86-windows-static-md-custom-clang.cmake  x86-windows-static-md-custom.cmake  x86-windows-static-md-linuxcross.cmake
mods/BluehillLoader/: generate.cmd  meson.build  xmake.lua
mods/BluehillLoader/src/: BluehillLoader.def  BluehillLoader.h  EdgeMinHook.cppm  Resource.rc  bonus.cppm  dllloader.cppm  dllmain.cpp  edgeminhook.cppm  fakexinput.cppm  fontbin.cppm  functions.cppm  global.cppm  level.cppm  music.cppm  resource.h  textloc.cppm
mods/BluehillLoader/subprojects/: EdgeMinHook
mods/EDGEKoreanPatch/: meson.build  meson.options
mods/EDGEKoreanPatch/font/: font.xml  genfx.sh
mods/EDGEKoreanPatch/src/: dllmain.cpp
mods/EDGEKoreanPatch/subprojects/: EDGEMinHook
mods/EDGEMinHook/: meson.build
mods/EDGEMinHook/include/: EdgeMinHook.h
mods/EdgeKoreanPatch/: meson.build  text.json  xmake.lua
mods/EdgeKoreanPatch/font/: checkchar.sh
mods/EdgeKoreanPatch/src/: dllmain.cpp
mods/EdgeMinHook/: meson.build  meson.options  vcpkg-configuration.json  xmake.lua
mods/EdgeMinHook/src/: Resource.rc  dllmain.c
mods/JavaMusic/: meson.build  meson.options  xmake.lua
mods/JavaMusic/src/: MidiPlayer.cpp  MidiPlayer.h  dllmain.cpp  global.h
rs/: Cargo.toml
rs/EdgeModTool-Cli/: Cargo.toml
rs/EdgeModTool-Cli/src/: Resource_exe.rc  lib.rs  main.rs
rs/edgemodtool/: Cargo.toml  build.rs
rs/edgemodtool/src/: Resource_exe.rc  commands.rs  compile_commands.rs  lib.rs  loader_commands.rs  main.rs  profile_commands.rs  resource_exe.h
rs/edgemodtoolcore/: Cargo.toml  build.rs
rs/edgemodtoolcore/src/: Resource_dll.rc  compiler.rs  lib.rs  loader.rs  loc.rs  macros.rs  profiles.rs  resource_dll.h
