[package]
name = "edgemodtool"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "EdgeModTool-Cli"
path = "edgemodtool-rs/main.rs"

[lib]
name = "edgemodtoolcore"
path = "edgemodtool-rs/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
byteorder = "1.5.0"
indexmap = { version = "2.13.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
