[workspace]
resolver = "3"
members = [
    "edgemodtool",
    "edgemodtoolcore",
]

[workspace.dependencies]
byteorder = "1.5.0"
clap = "4.6.0"
embed-resource = "3.0.6"
indexmap = "2.13.0"
serde = "1.0.228"
serde_json = "1.0.149"
sevenz-rust = "0.6.1"
skia-safe = "0.93.1"
unrar = "0.5.8"
zip = "8.2.0"
